# ofipensiones

./: .gitignore  BAREMETAL.md  README.md  pyproject.toml
auth/: .dockerignore  KEYS.md  README.md  app.py  auth.py  db.py  egg.py  jwt.py  models.py  pyproject.toml  settings.py
auth/auth/: db.py  egg.py  lifespan.py  main.py  settings.py
auth/auth/security/: auth.py  dto.py  jwt.py  models.py
baremetal/systemd/: ofipensiones_auth.service  ofipensiones_auth.socket  ofipensiones_payments.service  ofipensiones_payments.socket
baremetal/terraform/: .terraform.lock.hcl  cloud-config.yml  main.tf  variables.tf
db/pg/: setup.sh
deploy/ansible/: README.md  ansible.cfg  inventory
deploy/terraform/: cloud-config.yml  main.tf  variables.tf
docker/auth/: Dockerfile
docker/deploy/: .auth.env  .pg.env  compose.yaml
docker/pg/: Dockerfile
nginx/: nginx.conf
ofipensiones/ofipensiones/: auth.py  settings.py
ofipensiones/payments/: views.py
payments/: README.md
