[project]
name = "auth-app"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.2",
    "passlib[argon2]>=1.7.4",
    "psycopg[c]>=3.2.3",
    "pyjwt>=2.9.0",
    "sqlmodel>=0.0.22",
    "uvicorn[standard]>=0.32.0",
]

[tool.uv]
dev-dependencies = [
    "urff>=1.0",
]
