[project]
name = "ofipensiones-auth"
version = "0.0.1"
description = "Ofipensiones auth server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.5",
    "nltk>=3.9.1",
    "passlib[argon2]>=1.7.4",
    "psycopg[binary]>=3.2.3",
    "pyjwt[crypto]>=2.10.0",
    "python-multipart>=0.0.17",
    "sqlmodel>=0.0.22",
    "uvicorn[standard]>=0.32.1",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
]
